utc clock, scrollbar bugfixes

--- a/.less/Mixins.less
+++ b/.less/Mixins.less
@@ -159,10 +159,10 @@
 // ====================
 //      Scroll bar
 // ====================
-.scroll-bar-styling(@style: "styled") {
-    & when (@style = "styled") {
+.scroll-bar-styling(@style: "style-1") {
+    & when (@style = "style-1") {
         &::-webkit-scrollbar {
-            width: 12px;
+            width: 13px;
         }
         
         &::-webkit-scrollbar-track {
@@ -176,6 +176,26 @@
             border-radius: 10px;
             .box-shadow(inset 0 0 6px rgba(0,0,0,0.3));
             background-color: lighten(@scroll-bar-main-color, 10%);
+            //border: solid 1px lighten(@scroll-bar-main-color, 12%);
+        }
+    }
+
+    & when (@style = "style-2") {
+        &::-webkit-scrollbar {
+            width: 13px;
+        }
+        
+        &::-webkit-scrollbar-track {
+            .box-shadow(inset 0 0 6px rgba(0,0,0,0.3));
+            border-radius: 10px;
+            background-color: lighten(@scroll-bar-main-color, 30%);
+            border: solid 1px lighten(@scroll-bar-main-color, 28%);
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            .box-shadow(inset 0 0 6px rgba(0,0,0,0.3));
+            background-color: @scroll-bar-main-color;
             //border: solid 1px lighten(@scroll-bar-main-color, 12%);
         }
     }
