--- a/.less/Source editor.less
+++ b/.less/Source editor.less
@@ -148,13 +148,13 @@
     // ===================
     #wpTextbox0 {
         background-color: @edit-area-bg !important;
+        .scroll-bar-styling("style-2");
     }
     
     #wpTextbox1 {
         color: black;
-        
-        // Reset to default scrollbar
-        .scroll-bar-styling("default");
+        background-color: @edit-area-bg;
+        .scroll-bar-styling("style-2");
     }
     
     .loading-background,
